--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -470,6 +470,18 @@ div.smart-tag.active {
     border-radius: 7px;
     height: 50rem;
 }
+.alert.slide {
+    border: none;
+    overflow: hidden;
+}
+.alert.slide.gone {
+    height: 0rem;
+    padding: 0 1.25rem;
+} 
+.alert.slide.showing {
+    height: 50px;
+    transition: all 0.5s ease-out;
+} 
 .ref_small {
     font-size: 0.8465em;
     display: block;
