ui fix - clicking label updates checkbox

--- a/hawc/apps/assessment/templates/assessment/fragments/downloads_select.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/downloads_select.html
@@ -12,7 +12,7 @@
 </div>
 {% if allow_unpublished %}
 <div class="form-check">
-    <input class="form-check-input unpublished-checkbox" type="checkbox" data-url="{{name}}-url">
+    <input id="{{name}}-checkbox" class="form-check-input unpublished-checkbox" type="checkbox" data-url="{{name}}-url">
     <label class="form-check-label" for="{{name}}-checkbox">
         Include unpublished data
     </label>
