--- a/hawc/templates/base.html
+++ b/hawc/templates/base.html
@@ -73,6 +73,7 @@
               {% block breadcrumbs_outer %}{% endblock breadcrumbs_outer %}
 
               {% include "includes/messages.html" %}
+              {% include "includes/htmx_alert.html" %}
               {% if UA_SUPPORTED is False %}
                 {% include "includes/unsupported_browser.html" %}
               {% endif %}
@@ -104,6 +105,7 @@
     <script type="text/javascript" src="{% static 'vendor/jquery/3.7.0/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'vendor/bootstrap/4.6.2/js/bootstrap.bundle.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'vendor/htmx/1.8.5/htmx.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/htmx_error_messages.js'%}"></script>
     {% render_bundle 'main' %}
     {% if form %}{{ form.media }}{% endif %}
     {% block extrajs %}{% endblock %}
