--- a/hawc/apps/udf/templates/udf/udf_list.html
+++ b/hawc/apps/udf/templates/udf/udf_list.html
@@ -7,7 +7,7 @@
         <a class="dropdown-item" href="{% url 'udf:udf_create' %}">Create a form</a>
     </div>
 </div>
-<h2>User Defined Forms</h2>
+<h2 class="mt-0 mb-2">User Defined Forms</h2>
 {% if object_list %}
 <table id="mainTbl" class="table table-sm table-striped">
     {% bs4_colgroup '20,40,20,20' %}
