--- a/hawc/apps/udf/templates/udf/udf_list.html
+++ b/hawc/apps/udf/templates/udf/udf_list.html
@@ -8,7 +8,7 @@
 
 {% for object in object_list %}
 <div class="box-shadow p-3 rounded mb-4">
-    <div class="d-flex align-items-center">
+    <div class="d-flex align-items-start">
         <div>
             <div class="d-flex align-items-center">
                 <h4 class="mb-0" style="font-size: 1.15rem;">{{object.name}}</h4>
@@ -27,7 +27,7 @@
                 Preview
             </button> -->
             {% if object.user_can_edit %}
-            <a class="btn btn-primary" href="{{object.get_update_url}}">
+            <a class="btn btn-sm btn-primary" href="{{object.get_update_url}}">
                 Update
             </a>
             {% endif %}
@@ -36,12 +36,12 @@
     
     <div class="d-flex align-items-start flex-wrap">
         <div class="card mt-2 mr-3 flex-shrink-0">
-            <a class="px-3 py-2 clickable box-shadow-minor" data-toggle="collapse" href="#udf-{{object.id}}-preview" aria-expanded="false" aria-controls="udf-{{object.id}}-preview">Preview &nbsp;<i class="fa fa-angle-down" aria-hidden="true"></i> </a>
+            <a class="px-3 py-2 clickable box-shadow-minor" data-toggle="collapse" href="#udf-{{object.id}}-preview" aria-expanded="false" aria-controls="udf-{{object.id}}-preview" style="height: 2.6rem;">Preview &nbsp;<i class="fa fa-angle-down" aria-hidden="true"></i> </a>
         </div>
        
         <div class="card mt-2 mr-3 flex-shrink-0" style="width: 10rem;">
             {% if object.assessments.exists %}
-            <a class="px-3 py-2 mb-0 text-center clickable box-shadow-minor clickable" data-toggle="collapse" href="#udf-{{object.id}}-assessments" aria-expanded="false" aria-controls="#udf-{{object.id}}-assessments" style="position:relative; z-index: 1; scrollbar-gutter: stable;"> {{object.assessments.count}} assessments &nbsp; <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+            <a class="px-3 py-2 mb-0 text-center clickable box-shadow-minor clickable" data-toggle="collapse" href="#udf-{{object.id}}-assessments" aria-expanded="false" aria-controls="#udf-{{object.id}}-assessments" style="position:relative; z-index: 1; scrollbar-gutter: stable; height:2.6rem;"> {{object.assessments.count}} assessments &nbsp; <i class="fa fa-angle-down" aria-hidden="true"></i></a>
             <div id="udf-{{object.id}}-assessments" class="collapse list-group list-group-flush rounded" style="position:relative; z-index: 0; max-height: 10rem; overflow-y: scroll;">
                 {% for assessment in object.assessments.all %}
                 <a class="list-group-item list-group-item-action py-1 px-3 small" href="{{assessment.get_absolute_url}}">{{assessment.name}}</a>
@@ -53,7 +53,7 @@
         </div>
         <div class="card mt-2 mr-3 flex-shrink-0" style="width: 9rem;">
             {% if object.editors.exists %}
-            <a class="px-3 py-2 mb-0 text-center box-shadow-minor  {% if object.editors.exists %} clickable {% endif %}" data-toggle="collapse" href="#udf-{{object.id}}-editors" aria-expanded="false" aria-controls="#udf-{{object.id}}-editors" style="position:relative; z-index: 1; scrollbar-gutter: stable;"> {{object.editors.count}} editors &nbsp; <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+            <a class="px-3 py-2 mb-0 text-center box-shadow-minor  {% if object.editors.exists %} clickable {% endif %}" data-toggle="collapse" href="#udf-{{object.id}}-editors" aria-expanded="false" aria-controls="#udf-{{object.id}}-editors" style="position:relative; z-index: 1; scrollbar-gutter: stable; height:2.6rem;"> {{object.editors.count}} editors &nbsp; <i class="fa fa-angle-down" aria-hidden="true"></i></a>
             <div id="udf-{{object.id}}-editors" class="collapse list-group list-group-flush rounded" style="position:relative; z-index: 0; max-height: 10rem; overflow-y: scroll;">
                 {% for editor in object.editors.all %}
                 <div class="list-group-item py-1 px-3 small">{{editor}}</div>
@@ -63,13 +63,13 @@
             <p class="px-3 py-2 mb-0 text-center box-shadow-minor">No editors</p>
             {% endif %}
         </div>
-        <div class="card mt-2 mr-3 p-2 {{ object.published|yesno:'border-success text-success,text-muted' }}" title="{{ object.published|yesno:'Published,Unpublished' }}">
+        <div class="card mt-2 mr-3 p-2 {{ object.published|yesno:'border-success text-success,text-muted' }}" title="{{ object.published|yesno:'Published,Unpublished' }}" style="height: 2.6rem;">
             <p class="m-0 small"><i class="fa fa-{{ object.published|yesno:'eye,eye-slash' }} px-1"></i></p>
         </div>
-        <div class="card mt-2 mr-3 p-2">
+        <div class="card mt-2 mr-3 p-2" style="height: 2.6rem;">
             <p class="text-muted small m-0">Created by {{object.creator}}</p>
         </div>
-        <div class="card mt-2 mr-3 p-2">
+        <div class="card mt-2 mr-3 p-2" style="height: 2.6rem;">
             <p class="m-0 small text-muted">Updated {{object.last_updated|date:"DATE_FORMAT"}}
             </p>
         </div>
