Handle and display HTMX 400/500 errors (#978)
* add htmx error message

* move JS to our startup pack

---------

Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/hawc/templates/base.html
+++ b/hawc/templates/base.html
@@ -73,6 +73,7 @@
               {% block breadcrumbs_outer %}{% endblock breadcrumbs_outer %}
 
               {% include "includes/messages.html" %}
+              {% include "includes/htmx_alert.html" %}
               {% if UA_SUPPORTED is False %}
                 {% include "includes/unsupported_browser.html" %}
               {% endif %}
