list style updates

--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -706,6 +706,10 @@ a.outline-btn:hover, .dropdown.outline-btn:hover, .btn.outline-btn:hover {
     cursor: pointer;
 }
 
+div.udf-info-row>p, div.udf-info-row>div.card>p {
+    line-height: 1.6rem;
+}
+
 /* custom inline filterset forms */
 .form-sm-field {
     font-size: 0.88rem;
