form styling start

--- a/hawc/apps/udf/templates/udf/udf_form.html
+++ b/hawc/apps/udf/templates/udf/udf_form.html
@@ -2,17 +2,17 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12 pad-form">
     {% crispy form %}
     </div>
-    <div class="col-md-6 card">
+    <!-- <div class="col-md-6 card">
         <div class="card-body">
             <h4 class="card-title">Form Preview</h4>
             <div id="schema-preview-frame">
                 <div class="alert alert-info" role="alert">Click Preview to see what your form will look like!</div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
 {% endblock %}
 
