--- a/hawc/apps/udf/templates/udf/udf_form.html
+++ b/hawc/apps/udf/templates/udf/udf_form.html
@@ -5,19 +5,22 @@
     <div class="col-md-12 pad-form">
     {% crispy form %}
     </div>
-    <!-- <div class="col-md-6 card">
-        <div class="card-body">
-            <h4 class="card-title">Form Preview</h4>
-            <div id="schema-preview-frame">
-                <div class="alert alert-info" role="alert">Click Preview to see what your form will look like!</div>
-            </div>
-        </div>
-    </div> -->
 </div>
 {% endblock %}
 
 {% block extrajs %}
 <script>
-    window.app.HAWCUtils.dynamicFormListeners();
+    $(window).ready(function() {
+        $("#schema-preview-btn").appendTo($("label[for*='id_schema']"));
+        $("#schema-preview-btn").after('<i class="fa fa-spinner fa-spin htmx-indicator ml-2" id="spinner" aria-hidden="true"></i>');
+        $("#schema-preview-btn").removeClass("hidden");
+        $("#schema-preview-btn").on("click", function() {
+            $("#schema-preview-frame").removeClass('show');
+        });
+        $("#schema-preview-btn").on("htmx:afterOnLoad", function() {
+            window.app.HAWCUtils.dynamicFormListeners();
+            $("#schema-preview-frame").collapse("show");
+        });
+    });
 </script>
 {% endblock extrajs %}
