--- a/hawc/apps/udf/templates/udf/modelbinding_list.html
+++ b/hawc/apps/udf/templates/udf/modelbinding_list.html
@@ -12,23 +12,7 @@
     {% endactions %}
 
   </div>
-  {% if tag_object_list %}
-    <div class="mt-2 mb-4 vw75">
-      <div class="list-group mb-4 rounded box-shadow">
-        {% for object in tag_object_list %}
-          {% include "udf/fragments/_udf_tag_item.html" with udf=object.form binding=object tagbinding=True only %}
-        {% endfor %}
-        {% for object in object_list %}
-          {% include "udf/fragments/_udf_tag_item.html" with udf=object.form binding=object modelbinding=True only %}
-        {% endfor %}
-      </div>
-    </div>
-  {% endif %}
-
-  {% if not object_list and not tag_object_list %}
-    <div class="alert alert-warning text-center">No UDF model bindings created yet.</div>
-  {% endif %}
-
+  {% include "udf/fragments/binding_list.html" %}
 {% endblock %}
 
 {% block extrajs %}
