Refactor other htmx paths

--- a/hawc/apps/epiv2/templates/epiv2/fragments/_design_edit.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/_design_edit.html
@@ -7,8 +7,8 @@
     {% crispy form %}
     <div class="d-block container float-right">
       <div class="float-right">
-        <button class="btn btn-sm btn-primary" hx-post="{% url 'epiv2:design-update' object.pk %}">Save</button>
-        <button class="btn btn-sm btn-light" hx-get="{% url 'epiv2:design-detail' object.pk %}"><i class="fa fa-fw fa-times mr-1"></i>Cancel</button>
+        <button class="btn btn-sm btn-primary" hx-post="{% url 'epiv2:design-htmx' object.pk 'update' %}">Save</button>
+        <button class="btn btn-sm btn-light" hx-get="{% url 'epiv2:design-htmx' object.pk 'read' %}"><i class="fa fa-fw fa-times mr-1"></i>Cancel</button>
       </div>
     </div>
   </form>
