--- a/hawc/apps/eco/templates/eco/design_update.html
+++ b/hawc/apps/eco/templates/eco/design_update.html
@@ -12,7 +12,7 @@
 
 <div class="card my-4 mx-2">
     <div class="card-body">
-        {% url 'eco:cause-create' object.pk as cause_create %}
+        {% url 'eco:cause-htmx' object.pk 'create' as cause_create %}
         {% include "eco/fragments/_create_card.html" with title="Causes" hx_get=cause_create hx_target="#cause-empty-row" model="cause" %}
         <table class="table table-sm table-striped">
             {% bs4_colgroup '10,15,15,15,15,15,15' %}
@@ -33,7 +33,7 @@
 
 <div class="card my-4 mx-2">
     <div class="card-body">
-        {% url 'eco:effect-create' object.pk as effect_create %}
+        {% url 'eco:effect-htmx' object.pk 'create' as effect_create %}
         {% include "eco/fragments/_create_card.html" with title="Effects" hx_get=effect_create hx_target="#effect-empty-row" model="effect" %}
         <table class="table table-sm table-striped">
             {% bs4_colgroup '10,15,15,15,15,15,15' %}
@@ -54,7 +54,7 @@
 
 <div class="card my-4 mx-2">
     <div class="card-body">
-        {% url 'eco:result-create' object.pk as result_create %}
+        {% url 'eco:result-htmx' object.pk 'create' as result_create %}
         {% include "eco/fragments/_create_card.html" with title="Results" hx_get=result_create hx_target="#result-empty-row" model="result" %}
         <table class="table table-sm table-striped">
             {% bs4_colgroup '15,15,15,10,15,15,15' %}
