--- a/hawc/apps/assessment/templates/assessment/assessment_detail.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_detail.html
@@ -15,7 +15,7 @@
             <a class="dropdown-item" href="{% url 'assessment:delete' object.pk %}">Delete assessment</a>
           {% endif %}
           {% if feature_flags.ENABLE_UDF %}
-            <a class="dropdown-item" href="{{ object.get_udf_list_url }}">User defined models</a>
+            <a class="dropdown-item" href="{{ object.get_udf_list_url }}">User Defined Form bindings</a>
           {% endif %}
           <a class="dropdown-item" href="{{ object.get_clear_cache_url }}">Clear assessment cache</a>
           <a class="dropdown-item" href="{{ object.get_assessment_logs_url }}">View change logs</a>
