--- a/hawc/apps/udf/templates/udf/udfbinding_list.html
+++ b/hawc/apps/udf/templates/udf/udfbinding_list.html
@@ -5,8 +5,8 @@
     <h2 class="mt-0 mb-2">{{assessment.name}} UDF Bindings</h2>
     {% if obj_perms.edit_assessment %}
       {% actions %}
-        <button class="dropdown-item" hx-target="#binding-list" hx-swap="outerHTML" hx-get="{% url 'udf:binding_create' assessment.pk tag_binding_type  %}">Create literature tag binding</button>
-        <button class="dropdown-item" hx-target="#binding-list" hx-swap="outerHTML" hx-get="{% url 'udf:binding_create' assessment.pk model_binding_type %}">Create data extraction binding</button>
+        <button class="dropdown-item" hx-target="#binding-list" hx-swap="outerHTML" hx-get="{% url 'udf:binding_create' assessment.pk tag_binding  %}">Create literature tag binding</button>
+        <button class="dropdown-item" hx-target="#binding-list" hx-swap="outerHTML" hx-get="{% url 'udf:binding_create' assessment.pk model_binding %}">Create data extraction binding</button>
         <a class="dropdown-item" href="{% url 'udf:udf_list' %}">View UDFs</a>
       {% endactions %}
     {% endif %}
