--- a/hawc/apps/eco/templates/eco/design_update.html
+++ b/hawc/apps/eco/templates/eco/design_update.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h2 class="d-inline-block">{{object.name}}</h2>
   <div class="float-right pb-2">
-    <a id="design-update" class="btn btn-sm btn-primary" href="#" hx-get="{% url 'eco:design-update' object.pk %}" hx-target="#design-table"
+    <a id="design-update" class="btn btn-sm btn-primary" href="#" hx-get="{% url 'eco:design-htmx' object.pk 'update' %}" hx-target="#design-table"
        hx-swap="outerHTML">
       <i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;Update design</a>
   </div>
