--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -115,7 +115,7 @@ tfoot > tr > td {
     background-color: #d1d1d1 !important;
 }
 .clickable:hover.bg-pink {
-    background-color: #ffd0d0 !important;
+    background-color: #ff9e9e !important;
 }
 .box-shadow {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
