--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -108,14 +108,17 @@ tfoot > tr > td {
 .bg-gray {
     background-color: #e8e8e8;
 }
+.alert-danger {
+    background-color: #ffd0d0;
+}
 .bg-pink {
-    background-color: #ffb3b3;
+    background-color: #ffd0d0;
 }
 .clickable:hover.bg-gray {
     background-color: #d1d1d1 !important;
 }
 .clickable:hover.bg-pink {
-    background-color: #ff9e9e !important;
+    background-color: #ff9595b3 !important;
 }
 .box-shadow {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
